tests/negative/semantic/if_condition_string/input.ci
void main() {
    if ("oops") { print("x\n"); }
}
